--- a/06_dom/02_two.html
+++ b/06_dom/02_two.html
@@ -29,7 +29,7 @@
     // console.log(parent.firstElementChild);
     // console.log(parent.lastElementChild);
 
-    const dayOne = document.querySelector('.day')
+    const dayOne = document.querySelector('.day') // return first child 
     // console.log(dayOne);
     // console.log(dayOne.parentElement);
     // console.log(dayOne.nextElementSibling);
